[gd_scene load_steps=32 format=3 uid="uid://whyqrx8a4kgj"]

[ext_resource type="Script" path="res://ui/scripts/hud.gd" id="1_8vc0h"]
[ext_resource type="Texture2D" uid="uid://c78mvo8ei4dhh" path="res://png/spells/move/move.png" id="2_or86n"]
[ext_resource type="Texture2D" uid="uid://55y3q21lf8bo" path="res://png/spells/move/move_pressed.png" id="3_7hu1n"]
[ext_resource type="PackedScene" uid="uid://bj0idncko62mu" path="res://ui/name_card.tscn" id="3_ijptt"]
[ext_resource type="Texture2D" uid="uid://dyknfnxvsav7g" path="res://png/spells/move/move_hover.png" id="4_hx4gb"]
[ext_resource type="Texture2D" uid="uid://brai11eomca1e" path="res://png/spells/move/move_disabled.png" id="5_xa8pi"]
[ext_resource type="Texture2D" uid="uid://dlfcwggw2pvak" path="res://png/spells/move/move_focus.png" id="6_a2aqs"]
[ext_resource type="Texture2D" uid="uid://ccn5gh2j5q06h" path="res://png/spells/attack/attack.png" id="7_teo4p"]
[ext_resource type="Texture2D" uid="uid://dqhoig8dv3qay" path="res://png/spells/attack/attack_pressed.png" id="8_0f8lb"]
[ext_resource type="Texture2D" uid="uid://fhbu4fhh4jeg" path="res://png/spells/attack/attack_hover.png" id="9_8qrxh"]
[ext_resource type="Texture2D" uid="uid://bux5fc17w5o3r" path="res://png/spells/attack/attack_disabled.png" id="10_dcunf"]
[ext_resource type="Texture2D" uid="uid://xbuth5sxd8eg" path="res://png/spells/attack/attack_focus.png" id="11_j6prk"]
[ext_resource type="Texture2D" uid="uid://duejvyygi0v35" path="res://png/spells/pass_turn/pass.png" id="12_bwnss"]
[ext_resource type="Texture2D" uid="uid://diaunkpjrs8ve" path="res://png/spells/pass_turn/pass_pressed.png" id="13_xfns1"]
[ext_resource type="Texture2D" uid="uid://dgm6e2e3e4b7u" path="res://png/spells/pass_turn/pass_hover.png" id="14_6lm3i"]
[ext_resource type="Texture2D" uid="uid://blyl7mh5x2h2d" path="res://png/spells/pass_turn/pass_disable.png" id="15_svgbv"]
[ext_resource type="Texture2D" uid="uid://xhbvxl36yp41" path="res://png/spells/pass_turn/pass_focus.png" id="16_srwfu"]
[ext_resource type="Texture2D" uid="uid://cr21jssxpg2oh" path="res://png/spells/embark/embark.png" id="17_4ukt7"]
[ext_resource type="Texture2D" uid="uid://b6xy0q1dgi5nd" path="res://png/spells/embark/embark_pressed.png" id="18_a317t"]
[ext_resource type="Texture2D" uid="uid://ds7n3orsy0doh" path="res://png/spells/embark/embark_hover.png" id="19_lgag5"]
[ext_resource type="Texture2D" uid="uid://d18iwjjvviwpg" path="res://png/spells/embark/embark_disabled.png" id="20_hucfa"]
[ext_resource type="Texture2D" uid="uid://crl28pqj8uf44" path="res://png/spells/embark/embark_focus.png" id="21_gh3cb"]

[sub_resource type="InputEventKey" id="InputEventKey_hpbpr"]
device = -1
keycode = 87
unicode = 119

[sub_resource type="Shortcut" id="Shortcut_pflqt"]
events = [SubResource("InputEventKey_hpbpr")]

[sub_resource type="InputEventKey" id="InputEventKey_u651a"]
device = -1
pressed = true
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_fvsj0"]
events = [SubResource("InputEventKey_u651a")]

[sub_resource type="InputEventKey" id="InputEventKey_fl8xf"]
device = -1
pressed = true
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_oss6c"]
device = -1
pressed = true
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_xwxsu"]
events = [SubResource("InputEventKey_fl8xf"), SubResource("InputEventKey_oss6c")]

[sub_resource type="LabelSettings" id="LabelSettings_obf6k"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fk0fb"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8vc0h")

[node name="ActionBar" type="HFlowContainer" parent="."]
anchors_preset = -1
anchor_top = 0.901
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.152
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
alignment = 1

[node name="Equipment0" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Equipment"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Equipment1" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Equipment"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Equipment2" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Equipment"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Equipment3" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Equipment"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Equipment4" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Equipment"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Spell0" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Spell"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Spell1" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Spell"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Spell2" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Spell"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Spell3" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Spell"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Spell4" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Spell"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Ability0" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Ability"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Ability1" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Ability"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Ability2" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Ability"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Ability3" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Ability"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Ability4" type="TextureButton" parent="ActionBar"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Ability"
mouse_default_cursor_shape = 2
stretch_mode = 0

[node name="Walk" type="TextureButton" parent="ActionBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Walk"
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_pflqt")
texture_normal = ExtResource("2_or86n")
texture_pressed = ExtResource("3_7hu1n")
texture_hover = ExtResource("4_hx4gb")
texture_disabled = ExtResource("5_xa8pi")
texture_focused = ExtResource("6_a2aqs")
stretch_mode = 0

[node name="Attack" type="TextureButton" parent="ActionBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Attack"
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_fvsj0")
texture_normal = ExtResource("7_teo4p")
texture_pressed = ExtResource("8_0f8lb")
texture_hover = ExtResource("9_8qrxh")
texture_disabled = ExtResource("10_dcunf")
texture_focused = ExtResource("11_j6prk")
stretch_mode = 0

[node name="EndTurn" type="TextureButton" parent="ActionBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "End Turn"
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_xwxsu")
texture_normal = ExtResource("12_bwnss")
texture_pressed = ExtResource("13_xfns1")
texture_hover = ExtResource("14_6lm3i")
texture_disabled = ExtResource("15_svgbv")
texture_focused = ExtResource("16_srwfu")
stretch_mode = 0

[node name="Embark" type="TextureButton" parent="ActionBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "End Turn"
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("17_4ukt7")
texture_pressed = ExtResource("18_a317t")
texture_hover = ExtResource("19_lgag5")
texture_disabled = ExtResource("20_hucfa")
texture_focused = ExtResource("21_gh3cb")
stretch_mode = 0

[node name="TurnTracker" type="VFlowContainer" parent="."]
anchors_preset = -1
anchor_right = 0.198
anchor_bottom = 1.0
offset_right = -153.096
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="TurnCountCard" type="MarginContainer" parent="TurnTracker"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="TurnTracker/TurnCountCard"]
layout_mode = 2
color = Color(0, 0, 0, 0.529412)

[node name="VFlowContainer" type="VBoxContainer" parent="TurnTracker/TurnCountCard"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
alignment = 1

[node name="TurnLabel" type="Label" parent="TurnTracker/TurnCountCard/VFlowContainer"]
layout_mode = 2
text = "turn:"
label_settings = SubResource("LabelSettings_obf6k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnCount" type="Label" parent="TurnTracker/TurnCountCard/VFlowContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_fk0fb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameCard" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard2" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard3" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard4" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard5" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard6" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard7" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard8" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="NameCard9" parent="TurnTracker" instance=ExtResource("3_ijptt")]
layout_mode = 2

[node name="DebugUI" type="HFlowContainer" parent="."]
visible = false
offset_right = 220.0
offset_bottom = 40.0

[node name="CursorLocation" type="Label" parent="DebugUI"]
layout_mode = 2
text = "(0, 0)"

[node name="CursorVantage" type="Label" parent="DebugUI"]
layout_mode = 2
text = "
"

[connection signal="pressed" from="ActionBar/Equipment0" to="." method="_on_equipment_pressed" binds= [0]]
[connection signal="pressed" from="ActionBar/Equipment1" to="." method="_on_equipment_pressed" binds= [1]]
[connection signal="pressed" from="ActionBar/Equipment2" to="." method="_on_equipment_pressed" binds= [2]]
[connection signal="pressed" from="ActionBar/Equipment3" to="." method="_on_equipment_pressed" binds= [3]]
[connection signal="pressed" from="ActionBar/Equipment4" to="." method="_on_equipment_pressed" binds= [4]]
[connection signal="pressed" from="ActionBar/Spell0" to="." method="_on_spell_pressed" binds= [0]]
[connection signal="pressed" from="ActionBar/Spell1" to="." method="_on_spell_pressed" binds= [1]]
[connection signal="pressed" from="ActionBar/Spell2" to="." method="_on_spell_pressed" binds= [2]]
[connection signal="pressed" from="ActionBar/Spell3" to="." method="_on_spell_pressed" binds= [3]]
[connection signal="pressed" from="ActionBar/Spell4" to="." method="_on_spell_pressed" binds= [4]]
[connection signal="pressed" from="ActionBar/Ability0" to="." method="_on_ability_pressed" binds= [0]]
[connection signal="pressed" from="ActionBar/Ability1" to="." method="_on_ability_pressed" binds= [1]]
[connection signal="pressed" from="ActionBar/Ability2" to="." method="_on_ability_pressed" binds= [2]]
[connection signal="pressed" from="ActionBar/Ability3" to="." method="_on_ability_pressed" binds= [3]]
[connection signal="pressed" from="ActionBar/Ability4" to="." method="_on_ability_pressed" binds= [4]]
[connection signal="pressed" from="ActionBar/Walk" to="." method="_on_pressed" binds= [1]]
[connection signal="pressed" from="ActionBar/Attack" to="." method="_on_pressed" binds= [2]]
[connection signal="pressed" from="ActionBar/EndTurn" to="." method="_end_turn_pressed"]
[connection signal="pressed" from="ActionBar/Embark" to="." method="_on_embark_pressed"]
